--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -765,7 +765,9 @@ a{
     height: 58px;
     object-fit: cover;
 }
-
+.Connect-Section{
+    background-color:#e8efe9;
+}
 .icon-text {
     margin-top: 28px;
 }
