--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -420,8 +420,10 @@ a{
   .numeric-section .card-body-detail{
     font-size: var(--medium-font);
   }
-  .about-description p{
-    margin-top: 40px;
+  .about-description{
+    flex-direction: column;
+    gap: 20px;
+    display: flex;
   }
   .about-hero-subtext{
     margin-top: 50px;
@@ -1021,7 +1023,10 @@ body {
 .About-des {
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    gap: 20px;
+}
+.border-About{
+    border: 2px solid #F5F5F5;
 }
 
 .About-des p {
@@ -1138,7 +1143,7 @@ body {
     font-weight: 600;
     font-size: 36px;
     line-height: 54px;
-    color: var(--green);
+    color: #3A7A43;
 }
 
 .text {
@@ -2021,6 +2026,7 @@ body {
 .section-padding-footer{
     padding-top: 40px;
 }
+
 }
 
 
@@ -2076,6 +2082,17 @@ body {
 }
 
 @media(min-width:768px) {
+    .container1{
+        padding-left:26px !important ;
+        padding-right: 26px !important;
+    }
+    .Fueling-Excellence-img2{
+        display: flex;
+        justify-content: center;
+    }
+    .menej-box{
+        width: 581px;
+    }
     .section-padding {
         padding-top: 60px;
         padding-bottom: 60px;
@@ -2392,8 +2409,12 @@ body {
     }
     .Fueling-Excellence-img-text{
         padding-left: 0;
-        padding-right: 103px;
+        padding-right: 116px;
     }
+    .facility-desc{
+        gap: 50px;
+    }
+
     
 }
 
@@ -2406,6 +2427,10 @@ body {
     .Fueling-Excellence-width{
         width: 1212px;
      }
+     .Fueling-Excellence-img2{
+        display: flex;
+        justify-content: start;
+    }
      .Fueling-Excellence-img{
         justify-content: end;
         padding-right: 50px;
@@ -2420,6 +2445,9 @@ body {
      .benefit-icon{
         margin-top: 0;
      }
+    
+   
+   
 }
 
 @media(min-width:1600px) {
@@ -2437,8 +2465,7 @@ body {
     .about-seciton-text{
         padding-left: 130px;
      }
-    
-   
+
 }
 
 
